// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resume Item should render a Backend Software Engineer (Global Payments) item 1`] = `
<div>
  <ResumeItem
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="Bytedance Pte Ltd"
    text="Creating and managing user payment information for Bytedance products, maintaining APIs for payment processing, and ensuring the security of payment information."
    title="Backend Software Engineer (Global Payments)"
    year="Jun 2023 - Present"
  />
</div>
`;

exports[`Resume Item should render a CP2106 (Orbital Project) Teaching Assistant item 1`] = `
<div>
  <ResumeItem
    link={
      {
        "github": {
          "link": "https://github.com/NUSGreyhats/Orbital-2022",
          "tooltip": "GitHub Repository",
        },
      }
    }
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="National University of Singapore"
    text="Together with my team from NUS Greyhats, we conducted a web security workshop for the students of CP2106. It covers concepts ranging from SQL injection to XSS. We also include the source code for the CTF. It aims to promote better security in the projects by the students."
    title="CP2106 (Orbital Project) Teaching Assistant"
    year="May 2022"
  />
</div>
`;

exports[`Resume Item should render a CP2106 (Orbital Project) Teaching Assistant item 2`] = `
<div>
  <ResumeItem
    link={
      {
        "github": {
          "link": "https://github.com/NUSGreyhats/Orbital-2021",
          "tooltip": "GitHub Repository",
        },
        "youtube": {
          "link": "https://www.youtube.com/watch?v=yUs9zKqGJDU",
          "tooltip": "YouTube Video",
        },
      }
    }
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="National University of Singapore"
    text="Together with my team from NUS Greyhats, we conducted a web security workshop for the students of CP2106."
    title="CP2106 (Orbital Project) Teaching Assistant"
    year="May 2021"
  />
</div>
`;

exports[`Resume Item should render a CS2103T (Software Engineering Project) Senior Student Mentor item 1`] = `
<div>
  <ResumeItem
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="National University of Singapore"
    text="In this role, my responsibilities include guiding students on technical difficulties encountered within their assignments and creating solutions."
    title="CS2103T (Software Engineering Project) Senior Student Mentor"
    year="Aug 2021 - Nov 2021"
  />
</div>
`;

exports[`Resume Item should render a CS2103T (Software Engineering Project) Student Mentor item 1`] = `
<div>
  <ResumeItem
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="National University of Singapore"
    text="In this role, my responsibilities include guiding students on technical difficulties encountered within their assignments and creating solutions."
    title="CS2103T (Software Engineering Project) Student Mentor"
    year="Jan 2021 - Apr 2021"
  />
</div>
`;

exports[`Resume Item should render a CS2107 (Introduction to Information Security) Assignment Teaching Assistant item 1`] = `
<div>
  <ResumeItem
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="National University of Singapore"
    text="In this role, my responsibilities includes creating CTF style assignments, holding CTF consultations, answering queries and marking assignments. We work closely with the professors to ensure that the assignment questions covers the scope of the lecture and bridge the theory taught with lecture with practical applications."
    title="CS2107 (Introduction to Information Security) Assignment Teaching Assistant"
    year="Aug 2022 - May 2023"
  />
</div>
`;

exports[`Resume Item should render a CS2107 (Introduction to Information Security) Assignment Teaching Assistant item 2`] = `
<div>
  <ResumeItem
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="National University of Singapore"
    text="In this role, my responsibilities includes creating CTF style assignments, hold consultations and marking assignments."
    title="CS2107 (Introduction to Information Security) Assignment Teaching Assistant"
    year="Jan 2021 - May 2021"
  />
</div>
`;

exports[`Resume Item should render a Part Time Fullstack Engineering Intern item 1`] = `
<div>
  <ResumeItem
    link={
      {
        "google": {
          "link": "https://play.google.com/store/apps/details?id=com.foruslabs.checkist&hl=en_SG&gl=US&pli=1",
          "tooltip": "Google Play Store",
        },
      }
    }
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="Forus Labs"
    text="During my internship, I worked on CI/CD Pipelines and flutter development for the Checkist application. The application is available in the Google Play Store."
    title="Part Time Fullstack Engineering Intern"
    year="Aug 2021 - Nov 2021"
  />
</div>
`;

exports[`Resume Item should render a Security Research Intern item 1`] = `
<div>
  <ResumeItem
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="DSO National Laboratories"
    text="During my internship, I research on tools for automated vulnerability discovery and analysis. I also developed a proof of concept for finding vulnerabilities in binary code. These tools are useful in automatic vulnerability discovery and analysis. As this is not a commercial product, I am unable to disclose the details of the project."
    title="Security Research Intern"
    year="May 2022 - Aug 2022"
  />
</div>
`;

exports[`Resume Item should render a Software Engineering Intern (Backend) item 1`] = `
<div>
  <ResumeItem
    logo={
      {
        "blurDataURL": "data:image/png;base64,imagedata",
        "height": 40,
        "src": "/img.jpg",
        "width": 40,
      }
    }
    subTitle="Shopee Singapore"
    text="During my internship, I worked on projects related to the backend of Shopee's e-commerce platform. This includes the usage of Golang, Python2, Django and MySQL."
    title="Software Engineering Intern (Backend)"
    year="May 2021 - Jul 2021"
  />
</div>
`;
